# ForecastLab-AI

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
input/config/: hyperparameters.json
input/data/test/: test.csv
input/data/train/: train.csv
src/core/: predictor.py  prepare.py  trainer.py
src/utils/xgboost/: model.py
tests/: test_predictor.py
