[project]
name = "ForecastLab"
version = "0.0.1"
description = ""
authors = [
    {name = "FeresDarouich",email = "darouich.feres@supcom.tn"}
]
readme = "README.md"
requires-python = "3.12"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "plotly (>=6.6.0,<7.0.0)",
    "streamlit (>=1.56.0,<2.0.0)",
    "prophet (>=1.3.0,<2.0.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "shap (>=0.51.0,<0.52.0)",
    "openai (>=2.30.0,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
